--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>LiftMate</title>
+		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>    	
+		<script src="/javascripts/handlebars.runtime.js"></script>
+    	<script src="/javascripts/templates.js"></script> 
+    	<script src="/javascripts/helpers.js"></script>
+    	<script src="/javascripts/index.js"></script>
+	</head>
+
+	<body>
+		<div id="main-container"></div>
+	</body>
+</html>
+
+
+
+
+
+
+
+
+
+<!-- <!doctype html>
 <html>
 <head>
 	<title>Node Authentication</title>
@@ -20,11 +45,6 @@
 		<a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
 	</div>
 
-	<div class="text-center">
-		<p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
-		<p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
-	</div>
-
 </div>
 </body>
-</html>
+</html> -->
