--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,8 @@
 	<head>
 		<title>LiftMate</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>    	
 		<script src="/javascripts/handlebars.runtime.js"></script>
     	<script src="/javascripts/templates.js"></script> 
