--- a/views/userPage.html
+++ b/views/userPage.html
@@ -9,5 +9,6 @@
 	<body>
 		<h3 id="workout"></h3>
 		<li id="exercise"></li>
+		<button type="button" onclick="alert('Add Exercise!')">Add Exercise</button>
 	</body>
 </html>
