--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -11,7 +11,7 @@
     <div>Age: <input type="Number" name="weight" required /></div>
     <div>Password: <input type="password" name="password" required /></div>
     <div>Confirm Password: <input type="password" name="confirm" required /></div>
-    <button id="register-button">Submit</button>
+    <input id="submit"></input>
   </form>
 </div>
 
