--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>    	
+		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="/javascripts/handlebars.runtime.js"></script>
     	<script src="/javascripts/templates.js"></script> 
     	<script src="/javascripts/helpers.js"></script>
