--- a/views/userPage.html
+++ b/views/userPage.html
@@ -1,5 +1,10 @@
 <html>
 	<head>
+		<style>
+			#editExercisePopup.hidden{
+				display: none;
+			}
+		</style>
 		<script type="text/javascript" src="../public/javascripts/jquery.js"></script>
 	    <script type="text/javascript" src="../public/javascripts/handlebars-v2.0.0.js"></script>
 	    <script src="../public/javascripts/templates.js"></script>
