--- a/views/userPage.html
+++ b/views/userPage.html
@@ -1,19 +1,16 @@
 <html>
 	<head>
-		<style>
-			#editExercisePopup.hidden{
-				display: none;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">
 		<script type="text/javascript" src="../public/javascripts/jquery.js"></script>
 	    <script type="text/javascript" src="../public/javascripts/handlebars-v2.0.0.js"></script>
 	    <script src="../public/javascripts/templates.js"></script>
 	    <script src="exerciseDetails.js"></script>
 	    <script src="workoutDetails.js"></script>
+	    <script src="addExercise.js"></script>
 	</head>
 	<body>
-		<h3 id="workout"></h3>
-		<li id="exercise"></li>
-		<button type="button" onclick="alert('Add Exercise!')">Add Exercise</button>
+		<h3 id="workoutDetails"></h3>
+		<li id="exerciseDetails"></li>
+		<p id="addExercise"><p>
 	</body>
 </html>
