--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+#editExercisePopup.hidden{
+	display: none;
+}
+#editWorkoutPopup.hidden{
+	display: none;
+}
+#addExercisePopup.hidden{
+	display: none;
+}
