--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -8,10 +8,10 @@
   <form id="register-form">
     <div>Username: <input type="text" name="username" required /></div>
     <div>Weight: <input type="number" name="weight" required /></div>
-    <div>Age: <input type="Number" name="weight" required /></div>
+    <div>Age: <input type="Number" name="age" required /></div>
     <div>Password: <input type="password" name="password" required /></div>
     <div>Confirm Password: <input type="password" name="confirm" required /></div>
-    <input id="submit"/>
+    <input type="submit"/>
   </form>
 </div>
 
