--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -1,8 +1,13 @@
 <html>
 	<head>
-		<script type="text/javascript" src="../public/javascripts/jquery.js"></script>
-	    <script type="text/javascript" src="../public/javascripts/handlebars-v2.0.0.js"></script>
-	    <script src="../public/javascripts/templates.js"></script>
+		<style>
+			#editExercisePopup.hidden{
+				display: none;
+			}
+		</style>
+		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+ 		<script type="text/javascript" src="../public/javascripts/handlebars-v2.0.0.js"></script>	    
+ 		<script src="../public/javascripts/templates.js"></script>
 	    <script src="exerciseDetails.js"></script>
 	    <script src="workoutDetails.js"></script>
 	</head>
