added an addWorkout button

--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -11,8 +11,10 @@
 	    <script src="javascripts/exerciseDetails.js"></script>
 	    <script src="javascripts/workoutDetails.js"></script>
 	    <script src="javascripts/addExercise.js"></script>
+	    <script src="javascripts/addWorkout.js"></script>
 	</head>
 	<body>
+		<p id="addWorkout"><p>
 		<h3 id="workoutDetails"></h3>
 		<li id="exerciseDetails"></li>
 		<p id="addExercise"><p>
