logging added workouts

--- a/templates/addExercise.handlebars
+++ b/templates/addExercise.handlebars
@@ -4,14 +4,14 @@
 			$('#addExercisePopup').removeClass("hidden");
 		});
 	</script>
-	<button id="addExerciseButton" type="button")">Add Exercise</button>
+	<button id="addExerciseButton" type="button">Add Exercise</button>
 	<div id="addExercisePopup" class="hidden">
 		<form id="addExerciseForm">
 			Exercise Name: <input type="text" name="exName"><br>
 			Sets: <input type="text" name="sets"><br>
 			Reps: <input type="text" name="reps"><br>
 			Weight: <input type="text" name="weight">
-			<input type="button" value="Submit">
+			<input type="Submit">
 		</form>
 	</div>
 </div>
