--- a/templates/addWorkout.handlebars
+++ b/templates/addWorkout.handlebars
@@ -4,11 +4,11 @@
 			$('#addWorkoutPopup').removeClass("hidden");
 		});
 	</script>
-	<button id="addWorkoutButton" type="button")">Add Workout</button>
+	<button id="addWorkoutButton" type="button">Add Workout</button>
 	<div id="addWorkoutPopup" class="hidden">
 		<form id="addExerciseForm">
-			Date: <input type="text" name="date"><br>
-			<input type="button" value="Submit">
+			Date: <input type="date" name="date"><br>
+			<input type="submit" />
 		</form>
 	</div>
 </div>
