--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -21,7 +21,7 @@
   {{#if error}}
     <div class="error">{{error}}</div>
   {{/if}}
-  <form id="signin-form" action"/login" method="post">
+  <form id="signin-form" action="/login" method="post">
     <div>Username: <input type="text" name="username" required /></div>
     <div>Password: <input type="password" name="password" required /></div>
     <input type="submit" />
