--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -6,16 +6,11 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="/javascripts/handlebars.runtime.js"></script>
-	    <script src="javascripts/templates.js"></script>
-	    <script src="javascripts/exerciseDetails.js"></script>
-	    <script src="javascripts/workoutDetails.js"></script>
-	    <script src="javascripts/addExercise.js"></script>
-	    <script src="javascripts/addWorkout.js"></script>
+	    <script src="/javascripts/templates.js"></script>
+	    <script src="/javascripts/helpers.js"></script>
+	    <script src="/javascripts/userPage.js"></script>
 	</head>
 	<body>
-		<p id="addWorkout"><p>
-		<h3 id="workoutDetails"></h3>
-		<li id="exerciseDetails"></li>
-		<p id="addExercise"><p>
+		<div id="main-container"></div>
 	</body>
 </html>
