got rid of handlbars and fixed data routing

--- a/templates/userPage.handlebars
+++ b/templates/userPage.handlebars
@@ -15,7 +15,7 @@
 	<button type="button" onclick="alert('Delete Workout!')">Delete</button>
 	<div id="editWorkoutPopup" class="hidden">
 		<form id="editWorkoutForm">
-			Date: <input type="text" value={{[date]}} name="date">
+			Date: <input type="date" value={{[date]}} name="date">
 			<input type="submit" />
 		</form>
 	</div>
