commit to revert

--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -9,6 +9,7 @@
 	<script src="/javascripts/userPage.js"></script>
 </head>
 <body>
+	<%= data %>
 	<div id="addWorkout-template">	
 		<button id="addWorkoutButton" type="button">Add Workout</button>
 		<div id="addWorkoutPopup" class="hidden">
