--- a/templates/userPage.handlebars
+++ b/templates/userPage.handlebars
@@ -1,3 +1,6 @@
+{{#each workout}}
+	{{date}}
+	{{/each}}
 <div id="addWorkout-template">	
 	<button id="addWorkoutButton" type="button">Add Workout</button>
 	<div id="addWorkoutPopup" class="hidden">
