add workout data gets stored - id isn't functional yet

--- a/templates/userPage.handlebars
+++ b/templates/userPage.handlebars
@@ -34,7 +34,7 @@
 			Sets: <input type="text" name="setCount"><br>
 			Reps: <input type="text" name="repCount"><br>
 			Weight: <input type="text" name="weight">
-			<input type="hidden" name="workoutID" id="{{_id}}" />
+			<input type="hidden" name="workoutID" id="{{workout._id}}" />
 			<input type="submit" />
 		</form>
 	</div>
