--- a/templates/userPage.handlebars
+++ b/templates/userPage.handlebars
@@ -54,6 +54,7 @@
 
 
 {{#each workout}}
+	<div>
 		<div>
 			<span class="meta">Workout ({{date}})</span>
 			<button class="editWorkout" id="editWorkoutButton" type="button">Edit</button>
@@ -64,8 +65,40 @@
 					<input type="button" value="Submit">
 				</form>
 			</div></br>
+
+			<div class="addExercise">
+				<button id="addExerciseButton" type="button">Add Exercise</button>
+				<div id="addExercisePopup" class ="hidden">
+					<form class="addExerciseForm">
+						Exercise Name: <input type="text" name="name" required><br>
+						Sets: <input type="text" name="setCount" required><br>
+						Reps: <input type="text" name="repCount" required><br>
+						Weight: <input type="text" name="weight" required>
+						<input class="hidden" value={{_id}} name="workoutID">
+						<input type="submit" />
+					</form>
+				</div>
+			</div>
+			{{#each exercises}}
+				<span class="meta">{{name}}: ({{setCount}}x{{repCount}}) using {{weight}} pounds</span>
+				<button id="editExerciseButton" type="button">Edit</button>
+				<button type="button" onclick="alert('Delete Exercise!')">Delete</button>
+				<div id="editExercisePopup" class="hidden">
+					<form id="editExerciseForm">
+						Exercise Name: <input type="text" value={{name}} name="name"><br>
+						Sets: <input type="text" value={{setCount}} name="setCount"><br>
+						Reps: <input type="text" value={{repCount}} name="repCount"><br>
+						Weight: <input type="text" value={{weight}} name="weight">
+						<input type="button" value="Submit">
+					</form>
+				</div>
+				<br>				
+			{{/each}}
+
+
 		</div>
-	{{/each}}
+	<div>
+{{/each}}
 
 
 
