--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,14 @@ body {
 a {
   color: #00B7FF;
 }
+#logoutdiv{
+	float:right;
+	clear:both;
+
+}
+#addWorkout-template{
+	clear:both;
+}
 
 #editExercisePopup.hidden{
 	display: none;
@@ -16,3 +24,27 @@ a {
 #addExercisePopup.hidden{
 	display: none;
 }
+
+#register{
+	float:left;
+	border: 1px solid;
+	margin:15px;
+	padding:10px;
+	box-shadow:5px 5px 5px;
+/*	position:absolute;
+	z-index:3;
+*/}
+#signin{
+	float:right;
+	border: 1px solid;
+	margin: 15px;
+	padding: 10px;
+	box-shadow:5px 5px 5px;
+/*	z-index:2;
+	position:relative;
+*/}
+#arnold{
+	margin:10px;
+/*	z-index:1;
+	position:absolute;
+*/}
