--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,13 @@ a {
 
 }
  
-
+#workout{
+	
+	width:400px;
+	box-shadow:5px 5px 5px;
+	margin: 15px;
+	padding:10px;
+}
 .editExercisePopup .hidden{
 	display: none;
 }
